Conclusão curso Android com Kotlin: Migrations e relacionamento com o Room
Alterações realizadas durante o curso Android com Kotlin: Migrations e relacionamento com o Room da Alura.

--- a/app/src/main/res/layout/activity_formulario_cadastro_usuario.xml
+++ b/app/src/main/res/layout/activity_formulario_cadastro_usuario.xml
@@ -11,15 +11,26 @@
         android:layout_height="wrap_content"
         tools:context=".ui.activity.FormularioCadastroUsuarioActivity">
 
+        <de.hdodenhof.circleimageview.CircleImageView
+            android:id="@+id/activity_formulario_usuario_imagem"
+            android:layout_height="200dp"
+            android:scaleType="centerCrop"
+            app:layout_constraintEnd_toEndOf="parent"
+            app:layout_constraintStart_toStartOf="parent"
+            app:layout_constraintTop_toTopOf="parent"
+            android:padding="5dp"
+            android:src="@drawable/imagem_padrao"
+            android:layout_width="0dp" />
+
         <com.google.android.material.textfield.TextInputLayout
             android:id="@+id/textInputLayout_usuario"
             style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
             android:layout_width="0dp"
             android:layout_height="wrap_content"
             android:layout_margin="16dp"
-            app:layout_constraintEnd_toEndOf="parent"
-            app:layout_constraintStart_toStartOf="parent"
-            app:layout_constraintTop_toTopOf="parent">
+            app:layout_constraintEnd_toEndOf="@id/activity_formulario_usuario_imagem"
+            app:layout_constraintStart_toStartOf="@id/activity_formulario_usuario_imagem"
+            app:layout_constraintTop_toBottomOf="@id/activity_formulario_usuario_imagem">
 
             <com.google.android.material.textfield.TextInputEditText
                 android:id="@+id/activity_formulario_cadastro_usuario"
