--- a/app/src/main/res/layout/activity_formulario_produto.xml
+++ b/app/src/main/res/layout/activity_formulario_produto.xml
@@ -22,6 +22,27 @@
 
             app:srcCompat="@drawable/imagem_padrao" />
 
+
+
+        <com.google.android.material.textfield.TextInputLayout
+            android:id="@+id/activity_formulario_produto_usuario_id"
+            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox.ExposedDropdownMenu"
+            android:layout_width="0dp"
+            android:layout_height="wrap_content"
+            android:layout_margin="16dp"
+            app:layout_constraintEnd_toEndOf="parent"
+            app:layout_constraintStart_toStartOf="parent"
+            app:layout_constraintTop_toBottomOf="@id/activity_formulario_produto_imagem">
+
+            <AutoCompleteTextView
+                android:id="@+id/autoCompleteTextView"
+                android:layout_width="match_parent"
+                android:layout_height="match_parent"
+                android:inputType="none"
+                android:text="Escolha um usuário"
+                />
+        </com.google.android.material.textfield.TextInputLayout>
+
         <com.google.android.material.textfield.TextInputLayout
             android:id="@+id/formulario_produto_textinputlayout_nome"
             style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
@@ -30,7 +51,7 @@
             android:layout_margin="16dp"
             app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintStart_toStartOf="parent"
-            app:layout_constraintTop_toBottomOf="@id/activity_formulario_produto_imagem">
+            app:layout_constraintTop_toBottomOf="@id/activity_formulario_produto_usuario_id">
 
             <com.google.android.material.textfield.TextInputEditText
                 android:id="@+id/activity_formulario_produto_nome"
